@@ -7,6 +7,19 @@
     <property name="border_width">20</property>
     <property name="spacing">6</property>
     <child>
+      <object class="GtkLabel" id="webcam_heading">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="label" translatable="yes">This picture wil identify you in the account settings, login screen, and lock screen.</property>
+        <property name="wrap">True</property>
+      </object>
+      <packing>
+        <property name="expand">False</property>
+        <property name="fill">True</property>
+        <property name="position">0</property>
+      </packing>
+    </child>
+    <child>
       <placeholder/>
     </child>
   </object>
